--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "formik-mui-hook",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "main": "index.js",
   "type": "module",
   "repository": "https://github.com/neil585456525/formik-mui-hook.git",
   "author": "neil585456525 <neil585456525@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "test": "vitest"
+  },
   "dependencies": {
     "formik": "^2.4.5",
     "lodash-es": "^4.17.21"
@@ -15,7 +18,12 @@
     "rollup": "^3.29.0",
     "typescript": "^5.2.2",
     "vitest": "^0.34.3",
-    "yup": "^1.2.0",
-    "@mui/material": "^5.14.10"
+    "yup": "^0.32.11",
+    "@testing-library/react-hooks": "~8.0.1",
+    "@vitejs/plugin-react": "^4.0.4",
+    "jsdom": "^19.0.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "@mui/material": "^5.5.3"
   }
 }
