--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formik-mui-hook",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "dist/index.js",
   "type": "module",
   "repository": "https://github.com/neil585456525/formik-mui-hook.git",
@@ -26,6 +26,7 @@
     "react-dom": "^18.1.0",
     "rollup": "^3.29.0",
     "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-visualizer": "^5.6.0",
     "typescript": "^5.2.2",
     "vitest": "^0.34.3",
     "yup": "^1.3.0"
